# todo-mcp-service

./: .coverage  AGENTS.md  DEPLOYMENT.md  MCP_TESTING.md  README.md  SLACK_SETUP.md  alembic.ini  audit_mcp_types.py  coverage.xml  create_api_keys.py  cursor-agent-loop-improved.sh  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  fix_database_schema.sh  parse_cursor_agent.py  pyproject.toml  run_checks.sh  setup.py  start_service.sh  verify_mcp_routing.py
.github/workflows/: ci-cd.yml  deploy.yml
alembic/: env.py
alembic/versions/: 1de959ba9f60_add_metadata_column_to_tasks.py  228b7c679817_add_organization_id_columns.py  4b83d51c1d35_initial_schema.py  87fa4b07319e_add_is_admin_column_to_api_keys.py  951e5f2c4fd7_add_due_date_column_to_tasks.py  b0e1f6bbbfc9_add_time_tracking_columns_to_tasks.py  f5515f171fc4_add_priority_column_to_tasks.py
data/: todos.db
migrations/: __init__.py  add_multi_tenancy.py
scripts/: rollback.sh
src/: AUDIO_CONVERTER_README.md  Dockerfile  cli.py  cost_tracking.py  database.py  db_adapter.py  file_storage.py  graphql_schema.py  job_queue.py  main.py  mcp_api.py  migrate_to_postgresql.py  nats_queue.py  nats_worker.py  rate_limiting.py  security_headers.py  tracing.py  verification.py  voice_commands.py
static/: app.js  index.html
tests/: conftest.py  test_ab_testing.py  test_adapters.py  test_admin.py  test_api.py  test_api_consolidated.py  test_attachments.py  test_audio_conversion.py  test_backup.py  test_cli.py  test_conversation_backup.py  test_conversation_storage.py  test_cost_tracking.py  test_database.py  test_database_initialization.py  test_database_performance.py  test_estimated_hours.py  test_github.py  test_graphql.py  test_integration.py  test_job_queue.py  test_mcp_api.py  test_needs_verification.py  test_postgresql.py  test_routes_tasks.py  test_security_headers.py  test_slack.py  test_telegram.py  test_tracing.py  test_voice_commands.py  test_voice_quality.py  test_webhooks.py
tests/test_api_routes/: test_comments.py  test_health.py  test_mcp.py  test_projects.py  test_tasks.py
tests/test_services/: test_attachment_service.py  test_import_service.py  test_template_service.py
todorama/: __init__.py  __main__.py  audio_converter.py  cli.py  config.py  conversation_backup.py  conversation_storage.py  cost_tracking.py  database.py  db_adapter.py  graphql_schema.py  job_queue.py  main.py  main_refactored.py  mcp_api.py  migrate_to_postgresql.py  nats_queue.py  nats_worker.py  slack.py  telegram.py  verification.py  voice_quality.py  webhooks.py
todorama/adapters/: __init__.py  graphql_adapter.py  http_client.py
todorama/api/: all_routes.py  command_router.py
todorama/app/: factory.py
todorama/auth/: dependencies.py
todorama/commands/: __init__.py  analyze.py  audit.py  cli.py  initialize.py  keys.py  migrate.py  server.py  verify.py
todorama/conversation_storage/: __init__.py  ab_testing.py  analytics.py  conversations.py  llm_streaming.py  messages.py  prompt_templates.py  schema.py  sharing.py  summarization.py  templates.py
todorama/dependencies/: services.py
todorama/exceptions/: __init__.py  errors.py  handlers.py
todorama/mcp/: request_handlers.py
todorama/middleware/: logging_setup.py  setup.py
todorama/services/: __init__.py  attachment_service.py  (+4 more)
(+18 files in other folders)
